setup almost done
Signed-off-by: lowg0d <lowgod_@hotmail.com>

--- a/src/ui/desing_files/mainWindow.ui
+++ b/src/ui/desing_files/mainWindow.ui
@@ -19,10 +19,150 @@
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
-  <widget class="QWidget" name="centralwidget"/>
+  <property name="styleSheet">
+   <string notr="true">/* Global Styling */
+QMainWindow {
+    background-color: #111217;
+}
+
+QWidget {
+    background-color: #111217;
+    color: #b3b8c2;
+    font: 500 9.5pt &quot;Video Med&quot;;
+}
+
+/* ToolTip Styling */
+QToolTip {
+    background-color: #0a0c10;
+    font: 500 9pt &quot;Video Med&quot;;
+    color: #FFFFFF;
+    border-right: 3px solid #6C5FB4;
+    border-radius: 3px;
+}
+
+/** STATUS BAR **/
+#statusBarFrame QFrame{
+	margin-top:1px;
+	font: 600 8pt &quot;Video SemBd&quot;;
+	background-color: rgba(0,0,0,0);
+	border:0;
+	color: rgb(73,78,89);
+}</string>
+  </property>
+  <widget class="QWidget" name="centralwidget">
+   <layout class="QVBoxLayout" name="verticalLayout">
+    <property name="spacing">
+     <number>0</number>
+    </property>
+    <property name="leftMargin">
+     <number>0</number>
+    </property>
+    <property name="topMargin">
+     <number>27</number>
+    </property>
+    <property name="rightMargin">
+     <number>0</number>
+    </property>
+    <property name="bottomMargin">
+     <number>0</number>
+    </property>
+    <item>
+     <widget class="QFrame" name="centralFrame">
+      <property name="frameShape">
+       <enum>QFrame::NoFrame</enum>
+      </property>
+      <property name="frameShadow">
+       <enum>QFrame::Raised</enum>
+      </property>
+      <layout class="QVBoxLayout" name="verticalLayout_2">
+       <property name="spacing">
+        <number>0</number>
+       </property>
+       <property name="leftMargin">
+        <number>4</number>
+       </property>
+       <property name="topMargin">
+        <number>0</number>
+       </property>
+       <property name="rightMargin">
+        <number>4</number>
+       </property>
+       <property name="bottomMargin">
+        <number>0</number>
+       </property>
+       <item>
+        <widget class="QStackedWidget" name="stackedWidget_central">
+         <widget class="QWidget" name="page_centralLoading"/>
+         <widget class="QWidget" name="page_centralDashboard"/>
+        </widget>
+       </item>
+       <item>
+        <widget class="QFrame" name="statusBarFrame">
+         <property name="minimumSize">
+          <size>
+           <width>0</width>
+           <height>17</height>
+          </size>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>16777215</width>
+           <height>17</height>
+          </size>
+         </property>
+         <property name="frameShape">
+          <enum>QFrame::NoFrame</enum>
+         </property>
+         <property name="frameShadow">
+          <enum>QFrame::Raised</enum>
+         </property>
+         <property name="lineWidth">
+          <number>0</number>
+         </property>
+         <layout class="QHBoxLayout" name="horizontalLayout">
+          <property name="leftMargin">
+           <number>0</number>
+          </property>
+          <property name="topMargin">
+           <number>0</number>
+          </property>
+          <property name="rightMargin">
+           <number>0</number>
+          </property>
+          <property name="bottomMargin">
+           <number>0</number>
+          </property>
+          <item>
+           <widget class="QLabel" name="label_statusBar">
+            <property name="text">
+             <string>Version</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <spacer name="horizontalSpacer">
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>933</width>
+              <height>13</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+         </layout>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+    </item>
+   </layout>
+  </widget>
  </widget>
  <resources>
-  <include location="src.qrc"/>
+  <include location="../resources/src.qrc"/>
  </resources>
  <connections/>
 </ui>
