--- a/src/ui/desing_files/mainWindow.ui
+++ b/src/ui/desing_files/mainWindow.ui
@@ -25,304 +25,289 @@
   <property name="styleSheet">
    <string notr="true">/* Global Styling */
 QMainWindow {
-    background-color: #111217;
+  background-color: #111217;
 }
 
 QWidget {
-    background-color: #111217;
-    color: #b3b8c2;
-	selection-color: #ffffff;
-	selection-background-color:#6357a3;
+  background-color: #111217;
+  color: #b3b8c2;
+  selection-color: #ffffff;
+  selection-background-color: #6357a3;
 }
-
 
 /* ToolTip Styling */
 QToolTip {
-    background-color: #0a0c10;
-    font: 500 9pt &quot;Video Med&quot;;
-    color: #FFFFFF;
-    border-right: 3px solid #6C5FB4;
-    border-radius: 3px;
+  background-color: #0a0c10;
+  font: 500 9pt &quot;Video Med&quot;;
+  color: #ffffff;
+  border-right: 3px solid #6c5fb4;
+  border-radius: 3px;
 }
 #label_loadingDots {
-	font: 63 68pt &quot;Video SemBd&quot;;
+  font: 63 68pt &quot;Video SemBd&quot;;
 }
-
 
 /** Status Bar**/
-#statusBarFrame QFrame{
-	margin-top:1px;
-	font: 600 8pt &quot;Video SemBd&quot;;
-	background-color: rgba(0,0,0,0);
-	border:0;
-	color: rgb(73,78,89);
+#statusBarFrame QFrame {
+  margin-top: 1px;
+  font: 600 8pt &quot;Video SemBd&quot;;
+  background-color: rgba(0, 0, 0, 0);
+  border: 0;
+  color: rgb(73, 78, 89);
 }
-
 
 /* Sidebar Buttons */
-#frame_topSideBarButtons QPushButton{
-    font: 500 8pt &quot;Video Med&quot;;
-    border-radius: 4px;
-    border: 1px solid #2b2d30;
-	color: #808183;
+#frame_topSideBarButtons QPushButton {
+  font: 500 8pt &quot;Video Med&quot;;
+  border-radius: 4px;
+  border: 1px solid #2b2d30;
+  color: #808183;
 }
-#frame_topSideBarButtons QPushButton:hover{
-    background-color: #1a1b1f;
+#frame_topSideBarButtons QPushButton:hover {
+  background-color: #1a1b1f;
 }
-#frame_topSideBarButtons QPushButton:pressed{
-    background-color: #2b2d30;
+#frame_topSideBarButtons QPushButton:pressed {
+  background-color: #2b2d30;
 }
-#frame_topSideBarButtons QPushButton:checked{
-	color:#ffffff;
-	border: 1px solid #6357a4;
-    background-color: #1b1a28;
+#frame_topSideBarButtons QPushButton:checked {
+  color: #ffffff;
+  border: 1px solid #6357a4;
+  background-color: #1b1a28;
 }
-#frame_topSideBarButtons QPushButton:disabled{
-	border: 1px solid #292a30;
-	color: #292b29;
-	background-color: #0f1015;
+#frame_topSideBarButtons QPushButton:disabled {
+  border: 1px solid #292a30;
+  color: #292b29;
+  background-color: #0f1015;
 }
-
 
 #frame_mainControls QPushButton,
 #frame_terminalContainer QPushButton,
-#frame_connectionDropDown QPushButton{
-    font: 500 8pt &quot;Video Med&quot;;
-    border-radius: 4px;
-    border: 1px solid #2b2d30;
-	color: #808183;
+#frame_connectionDropDown QPushButton {
+  font: 500 8pt &quot;Video Med&quot;;
+  border-radius: 4px;
+  border: 1px solid #2b2d30;
+  color: #808183;
 }
 #frame_mainControls QPushButton:hover,
 #frame_terminalContainer QPushButton:hover,
-#frame_connectionDropDown QPushButton:hover{
-    background-color: #1a1b1f;
+#frame_connectionDropDown QPushButton:hover {
+  background-color: #1a1b1f;
 }
 #frame_mainControls QPushButton:pressed,
 #frame_terminalContainer QPushButton:pressed,
-#frame_connectionDropDown QPushButton:pressed{
-    background-color: #2b2d30;
+#frame_connectionDropDown QPushButton:pressed {
+  background-color: #2b2d30;
 }
 
-
-#frame_connectionDropDown QPushButton:checked{
-	color:#ffffff;
-	border: 1px solid #6357a4;
+#frame_connectionDropDown QPushButton:checked {
+  color: #ffffff;
+  border: 1px solid #6357a4;
 }
-#frame_connectionDropDown QPushButton:checked{
-	color:#ffffff;
-	border: 1px solid #6357a4;
-    background-color: #1b1a28;
-}
-
-#frame_connectionDropDown QPushButton:disabled{
-	border: 1px solid #292a30;
-	color: #292b29;
-	background-color: #12141a;
+#frame_connectionDropDown QPushButton:checked {
+  color: #ffffff;
+  border: 1px solid #6357a4;
+  background-color: #1b1a28;
 }
 
+#frame_connectionDropDown QPushButton:disabled {
+  border: 1px solid #292a30;
+  color: #292b29;
+  background-color: #12141a;
+}
 
 /* preferences page */
-#frame_preferencesSideBar QPushButton{
-    font: 500 8pt &quot;Video Med&quot;;
-    border-radius: 4px;
-    border: 1px solid #2b2d30;
-	color: #808183;
+#frame_preferencesSideBar QPushButton {
+  font: 500 8pt &quot;Video Med&quot;;
+  border-radius: 4px;
+  border: 1px solid #2b2d30;
+  color: #808183;
 }
-#frame_preferencesSideBar QPushButton:hover{
-    background-color: #1a1b1f;
+#frame_preferencesSideBar QPushButton:hover {
+  background-color: #1a1b1f;
 }
-#frame_preferencesSideBar QPushButton:pressed{
-    background-color: #2b2d30;
+#frame_preferencesSideBar QPushButton:pressed {
+  background-color: #2b2d30;
 }
-#frame_preferencesSideBar QPushButton:checked{
-	color:#ffffff;
-	border: 1px solid #6357a4;
-    background-color: #1b1a28;
+#frame_preferencesSideBar QPushButton:checked {
+  color: #ffffff;
+  border: 1px solid #6357a4;
+  background-color: #1b1a28;
 }
-#frame_preferencesSideBar QPushButton:disabled{
-	border: 1px solid #292a30;
-	color: #292b29;
-	background-color: #12141a;
+#frame_preferencesSideBar QPushButton:disabled {
+  border: 1px solid #292a30;
+  color: #292b29;
+  background-color: #12141a;
 }
-
-
 
 /*  STATE AND COUNTDONW  LABEL // BTN */
-#frame_StateAndCountdownContainer QLabel{
-	border-radius: 4px;
-	font: 600 10.5pt &quot;Video SemBd&quot;;
-	border: 1px solid #45484e;
-	background-color: #212227;
+#frame_StateAndCountdownContainer QLabel {
+  border-radius: 4px;
+  font: 600 10.5pt &quot;Video SemBd&quot;;
+  border: 1px solid #45484e;
+  background-color: #212227;
 }
-#frame_StateAndCountdownContainer QPushButton{
-	border-radius: 4px;
-	font: 600 10.5pt &quot;Video SemBd&quot;;
-	border: 1px solid #45484e;
-	background-color: #212227;
+#frame_StateAndCountdownContainer QPushButton {
+  border-radius: 4px;
+  font: 600 10.5pt &quot;Video SemBd&quot;;
+  border: 1px solid #45484e;
+  background-color: #212227;
 }
-#frame_StateAndCountdownContainer QPushButton:hover{
-	background-color: #37383d;
+#frame_StateAndCountdownContainer QPushButton:hover {
+  background-color: #37383d;
 }
-#frame_StateAndCountdownContainer QPushButton:pressed{
-	background-color: #4d4e52;
+#frame_StateAndCountdownContainer QPushButton:pressed {
+  background-color: #4d4e52;
 }
-
-
 
 /*  TLM CONTAINERS */
-#frame_mainTlmLabels QFrame{
-	border-radius: 4px;
-	border: 1px solid #45484e;
-	background-color: #212227;
-	font: 600 9.5pt &quot;Video SemBd&quot;;
+#frame_mainTlmLabels QFrame {
+  border-radius: 4px;
+  border: 1px solid #45484e;
+  background-color: #212227;
+  font: 600 9.5pt &quot;Video SemBd&quot;;
 }
-#frame_secondaryAndButtonContainer QFrame{
-	border-radius: 4px;
-	border: 1px solid #45484e;
-	background-color: #212227;
-	font: 600 9.5pt &quot;Video SemBd&quot;;
-}
-
-#frame_mainTlmLabels QLabel{
-	font: 600 9.5pt &quot;Video SemBd&quot;;
+#frame_secondaryAndButtonContainer QFrame {
+  border-radius: 4px;
+  border: 1px solid #45484e;
+  background-color: #212227;
+  font: 600 9.5pt &quot;Video SemBd&quot;;
 }
 
-#frame_secondaryAndButtonContainer QLabel{
-	font: 600 9.5pt &quot;Video SemBd&quot;;
+#frame_mainTlmLabels QLabel {
+  font: 600 9.5pt &quot;Video SemBd&quot;;
+}
+
+#frame_secondaryAndButtonContainer QLabel {
+  font: 600 9.5pt &quot;Video SemBd&quot;;
 }
 
 #frame_BigTlmLabels QLabel {
-	font: 600 10.5pt &quot;Video SemBd&quot;;
+  font: 600 10.5pt &quot;Video SemBd&quot;;
 }
-
 
 /** DROP COMBO BOX **/
 #frame_connectionDropDown QComboBox {
-    font: 500 8pt &quot;Video Med&quot;;
-    padding-left: 5px;
-    border-radius: 4px;
-    color: #808183;
-    border: 1px solid #2b2d30;
+  font: 500 8pt &quot;Video Med&quot;;
+  padding-left: 5px;
+  border-radius: 4px;
+  color: #808183;
+  border: 1px solid #2b2d30;
 }
 
 #frame_connectionDropDown QComboBox:hover {
-    background-color: #1a1b1f;
+  background-color: #1a1b1f;
 }
 
 #frame_connectionDropDown QComboBox:drop-down {
-    border: 0px;
+  border: 0px;
 }
 
 #frame_connectionDropDown QComboBox QAbstractItem {
-    padding: 4px 8px;
-	border-radius: 4px;
-    selection-background-color: none;
-    border: none;
+  padding: 4px 8px;
+  border-radius: 4px;
+  selection-background-color: none;
+  border: none;
 }
 #frame_connectionDropDown QComboBox QAbstractItem:item {
-    padding: 4px 8px;
-	border-radius: 4px;
+  padding: 4px 8px;
+  border-radius: 4px;
 }
 
 #frame_connectionDropDown QComboBox QAbstractItemView::item:selected {
-    border: none;
-    background-color: #6357a4;
+  border: none;
+  background-color: #6357a4;
 }
 
 #frame_connectionDropDown QListView {
-    border-radius: 4px;
-    border: 1px solid #2b2d30;
-    background-color: #12141a;
-    outline: none;
+  border-radius: 4px;
+  border: 1px solid #2b2d30;
+  background-color: #12141a;
+  outline: none;
 }
-
 
 /* WINDOW CONTROL BUTTONS */
-#frame_mainControls QPushButton:checked{
-	border-bottom: 2px solid #6357a3;
-	border-left: 2px solid rgba(108, 95, 180, 228);
-    background-color: rgba(32,34,38,155)
+#frame_mainControls QPushButton:checked {
+  border-bottom: 2px solid #6357a3;
+  border-left: 2px solid rgba(108, 95, 180, 228);
+  background-color: rgba(32, 34, 38, 155);
 }
-
-
 
 /* TERMINAL */
 /* message sender */
 #frame_MessageSender,
 #frame_graphContainer,
 #frame_terminalContainer {
-	border-radius: 4px;
-    border: 1px solid #373a3e;
+  border-radius: 4px;
+  border: 1px solid #373a3e;
 }
 /* TEXT BROWSER */
 #textBrowser_terminal {
-	padding-left: 4px;
-	color: #808183;
-	text-align: left;
-	font: 500 10pt &quot;Video Med&quot;;
-	selection-color: #ffffff;
-	selection-background-color:#6357a3;
-	border: none;
+  padding-left: 4px;
+  color: #808183;
+  text-align: left;
+  font: 500 10pt &quot;Video Med&quot;;
+  selection-color: #ffffff;
+  selection-background-color: #6357a3;
+  border: none;
 }
 #frame_terminalTextBrowserContainer {
-	border-radius: 4px;
-	border: 1px solid #373a3e;
+  border-radius: 4px;
+  border: 1px solid #373a3e;
 }
 
 /* LINE EDIT */
 #frame_MessageSender QLineEdit {
-	background-color: transparent;
-	border: none;
-	padding-left: 4px;
-	padding-right: 15px;
-	font: 500 9pt &quot;Video Med&quot;;
-	color: #737476;
-	padding-bottom: 2px;
-	selection-color: #ffffff;
-	selection-background-color:#6357a3;
+  background-color: transparent;
+  border: none;
+  padding-left: 4px;
+  padding-right: 15px;
+  font: 500 9pt &quot;Video Med&quot;;
+  color: #737476;
+  padding-bottom: 2px;
+  selection-color: #ffffff;
+  selection-background-color: #6357a3;
 }
 #frame_MessageSender QLineEdit:focus {
-	color: #808183;
+  color: #808183;
 }
 
 /*SCROLLBAR*/
-/*SCROLLBARS*/
-QScrollBar{
-	margin: 3px 0px 3px 3px;
-	border: 0;
-	border-radius: 4px;
-	width: 15px;
+QScrollBar {
+  margin: 3px 0px 3px 3px;
+  border: 0;
+  border-radius: 4px;
+  width: 15px;
 }
-QScrollBar::handle::vertical{
-	border-radius: 3px;
-	background-color: #282A2E;
-	min-height: 20px;
+QScrollBar::handle::vertical {
+  border-radius: 3px;
+  background-color: #282a2e;
+  min-height: 20px;
 }
 QScrollBar::handle::vertical:hover {
-	border-radius: 3px;
-	background-color: #535558;
-	min-height: 20px;
+  border-radius: 3px;
+  background-color: #535558;
+  min-height: 20px;
 }
 QScrollBar::sub-line {
-	border: none;
-	height: 0;
+  border: none;
+  height: 0;
 }
 QScrollBar::sub-line:vertical {
-	border: none;
-	height: 0;
+  border: none;
+  height: 0;
 }
 QScrollBar::add-line:vertical {
-	border: none;
-	height: 0;
+  border: none;
+  height: 0;
 }
-QScrollBar::up-arrow:vertical, QScrollBar::down-arrow:vertical {
-	background: none;
+QScrollBar::up-arrow:vertical,
+QScrollBar::down-arrow:vertical {
+  background: none;
 }
-QScrollBar::add-page:vertical, QScrollBar::sub-page:vertical {
-	background: none;
+QScrollBar::add-page:vertical,
+QScrollBar::sub-page:vertical {
+  background: none;
 }
-
-
 
 /* SEPARATOR LINES */
 #line,
@@ -334,10 +319,11 @@ QScrollBar::add-page:vertical, QScrollBar::sub-page:vertical {
 #line_6,
 #line_7,
 #line_8,
-#line_9 {	
-	border: 0;
-	background-color: #45484e;
-}</string>
+#line_9 {
+  border: 0;
+  background-color: #45484e;
+}
+</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QVBoxLayout" name="verticalLayout">
