--- a/src/ui/resources/src.qrc
+++ b/src/ui/resources/src.qrc
@@ -1,5 +1,6 @@
 <RCC>
   <qresource prefix="icons">
+    <file>icons/down_arrow.png</file>
     <file>icons/home.png</file>
     <file>icons/plug_volt.png</file>
     <file>icons/arrow_left.png</file>
