--- a/src/ui/styles/dark.qss
+++ b/src/ui/styles/dark.qss
@@ -50,9 +50,9 @@ QToolTip {
   background-color: #1b1a28;
 }
 #frame_topSideBarButtons QPushButton:disabled {
-  border: 1px solid #292a30;
+  border: 1px solid #1e1f22;
   color: #292b29;
-  background-color: #0f1015;
+  background-color: #17191d;
 }
 
 #frame_mainControls QPushButton,
@@ -77,17 +77,13 @@ QToolTip {
 #frame_connectionDropDown QPushButton:checked {
   color: #ffffff;
   border: 1px solid #6357a4;
-}
-#frame_connectionDropDown QPushButton:checked {
-  color: #ffffff;
-  border: 1px solid #6357a4;
   background-color: #1b1a28;
 }
 
 #frame_connectionDropDown QPushButton:disabled {
-  border: 1px solid #292a30;
+  border: 1px solid #1e1f22;
   color: #292b29;
-  background-color: #12141a;
+  background-color: #17191d;
 }
 
 /* preferences page */
@@ -129,9 +125,6 @@ QToolTip {
 }
 #frame_StateAndCountdownContainer QPushButton:hover {
   background-color: #37383d;
-}
-#frame_StateAndCountdownContainer QPushButton:pressed {
-  background-color: #4d4e52;
 }
 
 /*  TLM CONTAINERS */
@@ -282,6 +275,17 @@ QScrollBar::down-arrow:vertical {
 QScrollBar::add-page:vertical,
 QScrollBar::sub-page:vertical {
   background: none;
+}
+
+#label_longVersion {
+  border-radius: 4px;
+  font: 600 9.5pt "Video SemBd";
+  border: 1px solid #45484e;
+  background-color: #212227;
+padding: 6px;
+}
+#frame_preferencesContainer QLabel {
+font: 600 9.5pt "Video SemBd";
 }
 
 /* SEPARATOR LINES */
