--- a/src/ui/desing_files/mainWindow.ui
+++ b/src/ui/desing_files/mainWindow.ui
@@ -160,7 +160,7 @@ QToolTip {
   border-radius: 4px;
   border: 1px solid #45484e;
   background-color: #212227;
-  font: 600 9.5pt &quot;Video SemBd&quot;;
+  font: 600 9pt &quot;Video SemBd&quot;;
 }
 #frame_secondaryAndButtonContainer QFrame {
   border-radius: 4px;
@@ -177,7 +177,7 @@ QToolTip {
 }
 
 #frame_BigTlmLabels QLabel {
-  font: 600 11pt &quot;Video SemBd&quot;;
+  font: 600 10pt &quot;Video SemBd&quot;;
 	border: none;
 	background-color: none;
 }
@@ -895,13 +895,13 @@ QScrollBar::sub-page:vertical {
             <widget class="QFrame" name="frame_LeftSideBar">
              <property name="minimumSize">
               <size>
-               <width>255</width>
+               <width>260</width>
                <height>0</height>
               </size>
              </property>
              <property name="maximumSize">
               <size>
-               <width>250</width>
+               <width>260</width>
                <height>16777215</height>
               </size>
              </property>
@@ -1018,7 +1018,7 @@ QScrollBar::sub-page:vertical {
                        <cursorShape>PointingHandCursor</cursorShape>
                       </property>
                       <property name="text">
-                       <string>  TOGGLE RECS</string>
+                       <string> RECORDINGS</string>
                       </property>
                       <property name="icon">
                        <iconset resource="../resources/src.qrc">
@@ -1318,7 +1318,7 @@ QScrollBar::sub-page:vertical {
                   <rect>
                    <x>0</x>
                    <y>0</y>
-                   <width>251</width>
+                   <width>256</width>
                    <height>285</height>
                   </rect>
                  </property>
