--- a/src/ui/desing_files/mainWindow.ui
+++ b/src/ui/desing_files/mainWindow.ui
@@ -160,24 +160,24 @@ QToolTip {
   border-radius: 4px;
   border: 1px solid #45484e;
   background-color: #212227;
-  font: 600 9pt &quot;Video SemBd&quot;;
+  font: 63 9pt &quot;Video Cond SemBd&quot;;
 }
 #frame_secondaryAndButtonContainer QFrame {
   border-radius: 4px;
   border: 1px solid #45484e;
   background-color: #212227;
-  font: 600 9.5pt &quot;Video SemBd&quot;;
+  font: 63 9pt &quot;Video Cond SemBd&quot;;
 }
 
-
 #frame_mainTlmLabels QLabel {
-  font: 600 9pt &quot;Video SemBd&quot;;
+  	
+	font: 63 9pt &quot;Video Cond SemBd&quot;;
 	border: none;
 	background-color: none;
 }
 
 #frame_BigTlmLabels QLabel {
-  font: 600 10pt &quot;Video SemBd&quot;;
+  	font: 63 10pt &quot;Video Cond SemBd&quot;;
 	border: none;
 	background-color: none;
 }
@@ -872,25 +872,52 @@ QScrollBar::sub-page:vertical {
                   <number>0</number>
                  </property>
                  <item>
-                  <widget class="QPushButton" name="btn_missionDisplay">
-                   <property name="minimumSize">
-                    <size>
-                     <width>0</width>
-                     <height>32</height>
-                    </size>
+                  <widget class="QFrame" name="frame">
+                   <property name="frameShape">
+                    <enum>QFrame::StyledPanel</enum>
                    </property>
-                   <property name="maximumSize">
-                    <size>
-                     <width>16777215</width>
-                     <height>32</height>
-                    </size>
+                   <property name="frameShadow">
+                    <enum>QFrame::Raised</enum>
                    </property>
-                   <property name="cursor">
-                    <cursorShape>PointingHandCursor</cursorShape>
-                   </property>
-                   <property name="text">
-                    <string>NO MISSION ACTIVE</string>
-                   </property>
+                   <layout class="QHBoxLayout" name="horizontalLayout_7">
+                    <property name="spacing">
+                     <number>4</number>
+                    </property>
+                    <property name="leftMargin">
+                     <number>0</number>
+                    </property>
+                    <property name="topMargin">
+                     <number>0</number>
+                    </property>
+                    <property name="rightMargin">
+                     <number>0</number>
+                    </property>
+                    <property name="bottomMargin">
+                     <number>0</number>
+                    </property>
+                    <item>
+                     <widget class="QPushButton" name="btn_missionDisplay">
+                      <property name="minimumSize">
+                       <size>
+                        <width>0</width>
+                        <height>32</height>
+                       </size>
+                      </property>
+                      <property name="maximumSize">
+                       <size>
+                        <width>16777215</width>
+                        <height>32</height>
+                       </size>
+                      </property>
+                      <property name="cursor">
+                       <cursorShape>PointingHandCursor</cursorShape>
+                      </property>
+                      <property name="text">
+                       <string>NO MISSION ACTIVE</string>
+                      </property>
+                     </widget>
+                    </item>
+                   </layout>
                   </widget>
                  </item>
                  <item>
@@ -935,7 +962,7 @@ QScrollBar::sub-page:vertical {
                        <cursorShape>PointingHandCursor</cursorShape>
                       </property>
                       <property name="text">
-                       <string> RECORDINGS</string>
+                       <string> RECORDING</string>
                       </property>
                       <property name="icon">
                        <iconset resource="../resources/src.qrc">
@@ -1236,7 +1263,7 @@ QScrollBar::sub-page:vertical {
                    <x>0</x>
                    <y>0</y>
                    <width>256</width>
-                   <height>285</height>
+                   <height>283</height>
                   </rect>
                  </property>
                  <layout class="QVBoxLayout" name="verticalLayout_7">
