--- a/src/ui/desing_files/settings.ui
+++ b/src/ui/desing_files/settings.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1198</width>
+    <width>1205</width>
     <height>70</height>
    </rect>
   </property>
@@ -64,7 +64,6 @@
     font: 500 9.5pt &quot;Video Med&quot;;
     border-radius: 4px;
     background-color: rgba(58, 59, 63, 0.2);
-	margin-right: 3px;
 }
 
 QFrame:hover{
@@ -372,6 +371,7 @@ QComboBox:hover {
 QComboBox:drop-down {
     border: 0px;
     border-radius: 0px;
+	font: 500 14.5pt &quot;Video Med&quot;;
 }
 
 QComboBox::down-arrow {
@@ -384,7 +384,35 @@ QComboBox::down-arrow {
 QFrame {
     color: rgba(255, 255, 255, 0.6);
     background-color: rgba(52, 73, 94, 0.3);
-    font: 500 10.5pt &quot;Video Med&quot;;
+    font: 500 14.5pt &quot;Video Med&quot;;
+	padding: 5px;
+}
+QComboBox QAbstractItem {
+  padding: 4px 8px;
+  border-radius: 4px;
+  selection-background-color: none;
+  border: none;
+	border-bottom: 1px rgba(255,255,255,0.4);
+	font: 500 14.5pt &quot;Video Med&quot;;
+}
+QComboBox QAbstractItem::item {
+  padding: 4px 8px;
+  border-radius: 4px;
+font: 500 14.5pt &quot;Video Med&quot;;
+}
+
+QComboBox QAbstractItemView::item:selected {
+  border: none;
+  background-color: #6357a4;
+font: 500 14.5pt &quot;Video Med&quot;;
+}
+
+QListView {
+  border-radius: 4px;
+  border: 1px solid #2b2d30;
+  background-color: #12141a;
+font: 500 14.5pt &quot;Video Med&quot;;
+  outline: none;
 }</string>
            </property>
            <property name="sizeAdjustPolicy">
